wrap receive log todo