@@ -1,10 +1,8 @@
 package org.manage.log.receive.provider.service;
 
-import com.google.common.collect.ImmutableList;
-import org.apache.commons.collections4.CollectionUtils;
-import org.manage.log.common.constants.HandleError;
 import org.manage.log.common.constants.LogRecordIndexSort;
 import org.manage.log.common.model.config.LogConfig;
+import org.manage.log.common.model.config.LogIndexConfig;
 import org.manage.log.common.model.log.LogRecord;
 import org.manage.log.common.model.log.builder.LogRecordFactory;
 import org.manage.log.receive.facade.dto.OperateLogResp;
@@ -13,6 +11,7 @@ import org.manage.log.receive.provider.repository.LogConfigRepository;
 import org.manage.log.receive.provider.repository.LogRecordRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.util.Assert;
 
 import javax.annotation.Resource;
 import java.time.LocalDateTime;
@@ -40,15 +39,13 @@ public abstract class AbstractReceiveLog implements ReceiveLog {
 
     @Override
     public OperateLogResp<Boolean> receive(UploadLogRecordReq uploadLogRecordReq) {
-        return receive(ImmutableList.of(uploadLogRecordReq));
+        return receive(List.of(uploadLogRecordReq));
     }
 
     @Override
     public OperateLogResp<Boolean> receive(List<UploadLogRecordReq> uploadLogRecordReqs) {
         //judge income request data illegal
-        if(!judgeParamIllegal(uploadLogRecordReqs)){
-            return new OperateLogResp<>(HandleError.PARAM_MISS);
-        }
+        judgeParamIllegal(uploadLogRecordReqs);
         //transfer request data to domain entity
         //get log config from repository
         List<String> configNameList = uploadLogRecordReqs.stream().map(UploadLogRecordReq::getConfigName).toList();
@@ -66,39 +63,34 @@ public abstract class AbstractReceiveLog implements ReceiveLog {
         return uploadLogRecordReqList.stream().map(uploadReq -> {
             LogConfig logConfig = configNameToConfig.get(uploadReq.getConfigName());
             return ofNullable(logConfig).map(config -> {
-                //logConfig miss log template define todo
-                String content = "";
-                //uploadReq miss operator define todo
-                String operator = "";
-                //uploadReq miss index value define todo
+                //format content by content template
+                String content = String.format(config.getContentTemplate(), uploadReq.getValueList());
+                //get index value from value list according by index config
                 Map<String, LogRecordIndexSort> indexValueToIndexSortMap = new HashMap<>();
-                return logRecordFactory.build(content, logConfig.getOperatorSort(), operator,
-                                                                config.getLogRecordSort(), indexValueToIndexSortMap);
+                for(LogIndexConfig logIndexConfig : config.getIndexConfigList()){
+                    indexValueToIndexSortMap.put(uploadReq.getValueList().get(logIndexConfig.getValueIndex().intValue()), logIndexConfig.getLogRecordIndexSort());
+                }
+                return logRecordFactory.build(content, logConfig.getOperatorSort(), uploadReq.getOperator(),
+                                                                config.getLogRecordSort(), indexValueToIndexSortMap,
+                                            getUploadTime(uploadReq.getUploadTime()));
 
             }).orElse(null);
         }).filter(Objects::nonNull).toList();
     }
 
-    protected boolean judgeParamIllegal(UploadLogRecordReq uploadLogRecordReq){
-        if(Objects.isNull(uploadLogRecordReq)){
-            log.error("async receive log, upload req is null");
-            return false;
-        }
-        //todo 参数校验
-        return true;
-    }
-
     protected abstract LocalDateTime getUploadTime(LocalDateTime incomingUploadTime);
 
-    private boolean judgeParamIllegal(List<UploadLogRecordReq> uploadLogRecordReqs){
-        if(CollectionUtils.isEmpty(uploadLogRecordReqs)){
-            return false;
-        }
+    private void judgeParamIllegal(List<UploadLogRecordReq> uploadLogRecordReqs){
+        Assert.notNull(uploadLogRecordReqs, "receive log, upload request must not be null");
         for(UploadLogRecordReq req : uploadLogRecordReqs){
-            if(!judgeParamIllegal(req)){
-                return false;
-            }
+            judgeParamIllegal(req);
         }
-        return true;
+    }
+
+    protected void judgeParamIllegal(UploadLogRecordReq uploadLogRecordReq){
+
+        Assert.notNull(uploadLogRecordReq, "receive log, upload req must not be null");
+        Assert.notNull(uploadLogRecordReq.getConfigName(), "receive log, config name must not be null");
+        Assert.notNull(uploadLogRecordReq.getOperator(), "receive log, operator must not be null");
     }
 }
